# lab04

./: .travis.yml  CMakeLists.txt  travis.yml
hello_world_application/_build/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/formatter/: Makefile
solver_application/: equation.cpp
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/formatter/: Makefile
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
